--- a/index.html
+++ b/index.html
@@ -2,318 +2,20 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
-	<title>维亚芳网络</title>
-	<link rel="stylesheet" type="text/css" href="css/index.css">
-	<link rel="stylesheet" type="text/css" href="css/font-awesome/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+	<title>iRock-The Virtual Pet Rock</title>
+	<script type="text/javascript">
+		function touchRock(){
+			var userName = prompt("What is your name?","Enter your name here.");
+			if (userName) {
+				alert("It is good to meet you," + userName + ".");
+				document.getElementById("rockImg").src = "rock_happy.png";
+			}
+		}
+	</script>
 </head>
-<body>
-	<div class="wrapper">
-<!--....................header............................-->
-		<header class="head">
-			<div class="container">
-				<div class="row">
-					<div col-md-12>
-						<div class="logo">
-							<a href="#"><img src="images/logo.png"></a>
-						</div>
-						<nav class="nav1">
-							<ul>
-								<li class="now"><a href="#">网站首页</a></li>
-								<li><a href="#">关于我们</a></li>
-								<li><a href="#">案例展示</a></li>
-								<li><a href="#">项目服务</a></li>
-								<li class="last"><a href="#">新闻动态</a></li>
-								<li class="last last2"><a href="#">联系我们</a></li>
-								<li class="last last3"><a href="#">自助平台</a></li>
-							</ul>
-						</nav>
-						<div class="phone">
-							<i></i>
-							<i></i>
-							<i></i>
-						</div>
-					</div>
-				</div>
-			</div>
-		</header>
-							<!--header_end-->
-
-
-
-
-<!--..............................banner.........................-->
-		<section class="banner">
-			<div class="fullSlide">
-				<div class="bd">
-					<ul>
-						<li><img src="images/banner.jpg"/></li>
-						<li><img src="images/banner.jpg"/></li>
-						<li><img src="images/banner.jpg"/></li>
-					</ul>
-				</div>
-
-				<div class="hd"><ul></ul></div>
-
-				<a class="prev" href="javascript:void(0)"></a>
-				<a class="next" href="javascript:void(0)"></a>
-			</div>
-		</section>
-							<!--banner_end-->
-
-
-
-
-<!--.........................company_product.........................-->
-		<div class="m0">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12">
-						<div class="product1">
-							<div class="C_img">
-								<a href="#"><img src="images/appcontent1.png"></a>
-							</div>
-							<div class="C_hn">
-								<p><a href="#">响应式网站</a></p>
-							</div>
-							<div class="C_p">
-								<p>电脑、手机、平板都能适配显示</p>
-								<p>无需放大缩小查看。</p>
-							</div>
-						</div>
-						<div class="product2">
-							<div class="C_img">
-								<a href="#"><img src="images/appcontent2.png"></a>
-							</div>
-							<div class="C_hn">
-								<p><a href="#">域名建设</a></p>
-							</div>
-							<div class="C_p">
-								<p>免费支持泛域名让你的域名具有无限</p>
-								<p>二级域名转发功能。</p>
-							</div>
-						</div>
-						<div class="product2">
-							<div class="C_img">
-								<a href="#"><img src="images/appcontent3.png"></a>
-							</div>
-							<div class="C_hn">
-								<p><a href="#">网站推广</a></p>
-							</div>
-							<div class="C_p">
-								<p>支持百度搜索</p>
-								<p>可接入到微信、微博以及更多APP。</p>
-							</div>
-						</div>
-						<div class="product2">
-							<div class="C_img">
-								<a href="#"><img src="images/appcontent4.png"></a>
-							</div>
-							<div class="C_hn">
-								<p><a href="#">标志设计</a></p>
-							</div>
-							<div class="C_p">
-								<p>专业互动多媒体项目开发多媒体</p>
-								<p>“互动,睛彩视界”</p>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>	
-							<!--company_product_end-->
-
-
-
-
-
-<!--................................service.................................-->
-		<div class="service">
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-4">
-						<div class="s_img">
-							<img src="images/box1.jpg">
-						</div>
-						<div class="s_con">
-							<p><span class="hh">关于我们</span></p>
-							<p>微亚芳网络工作室是国内营销型网站技术标准制订者之一，专业为企、事业单位提供各类网站，包括：品牌创意型网站、企业宣传型网站、电子商务型网站。</p>
-						</div>
-						<div class="s_a">
-							<p><a href="#">查看详细 >></a></p>
-						</div>
-					</div>
-					<div class="col-sm-4">
-						<div class="s_img">
-							<img src="images/box2.jpg">
-						</div>
-						<div class="s_con">
-							<p><span class="hh">网络营销</span></p>
-							<p>整合营销已经形成六大业务板块多作业模块，有效整合了媒体广告、网络公关、互动营销三大领域，并拥有自己的独特优势，为客户带来潜在的客户源。</p>
-						</div>
-						<div class="s_a">
-							<p><a href="#">查看详细 >></a></p>
-						</div>
-					</div>
-					<div class="col-sm-4">
-						<div class="s_img">
-							<img src="images/box3.jpg">
-						</div>
-						<div class="s_con">
-							<p><span class="hh">建站知识</span></p>
-							<ul>
-								<li><time>2014/10/20</time><a href="#">随着快速发展，生产了新的设计</a></li>
-								<li><time>2014/10/20</time><a href="#">专家称中国互联网金融体量将达数十...</a></li>
-								<li><time>2014/10/17</time><a href="#">以互联网思维做传统产业(感言)</a></li>
-							</ul>
-						</div>
-						<div class="s_a">
-							<p><a href="#">查看详细 >></a></p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-							<!--service_end-->
-
-
-
-<!--.............................new_case.................................-->
-		<div class="new_case">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12">
-						<div class="title1">
-							<p><span>最新案例</span></p>
-							<p>这些客户始终信任我们的技术和服务</p>
-						</div>
-						
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-sm-3 col-xs-6"><img src="images/article_list1_3.jpg"></div>
-					<div class="col-sm-3 col-xs-6"><img src="images/article_list2_6.jpg"></div>
-					<div class="col-sm-3 col-xs-6"><img src="images/article_list1_3.jpg"></div>
-					<div class="col-sm-3 col-xs-6"><img src="images/article_list4.jpg"></div>
-				</div>
-				<div class="row">
-					<div class="col-sm-3 col-xs-6"><img src="images/article_list5.jpg"></div>
-					<div class="col-sm-3 col-xs-6"><img src="images/article_list2_6.jpg"></div>
-					<div class="col-sm-3 col-xs-6"><img src="images/article_list7.jpg"></div>
-					<div class="col-sm-3 col-xs-6"><img src="images/article_list8.jpg"></div>
-				</div>
-			</div>
-		</div>
-								<!--new_case_end-->
-<!--.................................my_costomer............................-->
-		<div class="my_costomer">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12">
-						<div class="title2">
-							<p><span>我的客户</span></p>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-sm-2 col-xs-4"><img src="images/client1_3_10.jpg"></div>
-					<div class="col-sm-2 col-xs-4"><img src="images/client2_5_9_11.jpg"></div>
-					<div class="col-sm-2 col-xs-4"><img src="images/client1_3_10.jpg"></div>
-					<div class="col-sm-2 col-xs-4"><img src="images/client4_6_12.jpg"></div>
-					<div class="col-sm-2 col-xs-4"><img src="images/client2_5_9_11.jpg"></div>
-					<div class="col-sm-2 col-xs-4"><img src="images/client4_6_12.jpg"></div>
-				</div>
-				<div class="row">
-					<div class="col-sm-2 col-xs-4"><img src="images/client7.jpg"></div>
-					<div class="col-sm-2 col-xs-4"><img src="images/client8.jpg"></div>
-					<div class="col-sm-2 col-xs-4"><img src="images/client2_5_9_11.jpg"></div>
-					<div class="col-sm-2 col-xs-4"><img src="images/client1_3_10.jpg"></div>
-					<div class="col-sm-2 col-xs-4"><img src="images/client2_5_9_11.jpg"></div>
-					<div class="col-sm-2 col-xs-4"><img src="images/client4_6_12.jpg"></div>
-				</div>
-			</div>
-		</div>
-								<!--my_costomer_end-->							
-<!--...................................footer..............................-->
-		<div class="footer">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12">
-						<div class="left">
-							<div class="nav2">
-								<p><a href="#">关于我们</a> | <a href="#">案例展示</a> | <a href="#">服务项目</a> | <a href="#">新闻动态</a> | <a href="#">联系我们</a> | <a href="#">自助平台</a> | </p>
-							</div>
-							<div class="con">
-								<p>&copyright; vyafang.tuweia.cn All rights reserved.</p>
-								<p><a href="http://imy.zspt.cn/login.portal">网站在中职院zspt.cn创建</a></p>
-							</div>
-						</div>
-						<div class="right">
-							<div class="con">
-								<p>
-									<span>关于我们：</span>
-									<img src="images/link1.png">
-									<img src="images/link2.png">
-									<img src="images/link3.png">
-								</p>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-									<!--footer_end-->								
-	<div class="back_top">
-		<span style="font-size:14px"><p id="back-to-top"><a href="#top"><span></span><img src="images/top-icon.png"></a></p></span>
-	</div>
+<body onload="alert('Hello,I am your pet rock.');">
+	<div style="margin-top: 100px;text-align: center">
+		<img id="rockImg" src="rock.png" style="cursor:pointer;" alt="iRock" onclick="return touchRock()">
 	</div>
 </body>
 </html>
-<script type="text/javascript" src="js/jquery-3.2.1.js"></script>
-<script type="text/javascript" scr="js/bootstrap.js"></script>
-<script type="text/javascript" src="js/jquery1.42.min.js"></script>
-<script type="text/javascript" src="js/jquery.SuperSlide.2.1.2.js"></script>
-<script type="text/javascript">
-	jQuery(".fullSlide").slide({ titCell:".hd ul", mainCell:".bd ul", effect:"leftLoop", vis:"auto", autoPlay:true, autoPage:true, trigger:"click" });
-</script>
-<script>
-	$(function(){
-		$(".phone").click(function(){
-			$(".head .nav1").slideToggle();
-		})
-
-		$(window).resize(function(){
-			if($(this).width()>480){
-				$(".head .nav1").show();
-			}
-		})
-	})
-</script>
-<script>
-$(function(){
-        //当滚动条的位置处于距顶部100像素以下时，跳转链接出现，否则消失
-        $(function () {
-            $(window).scroll(function(){
-                if ($(window).scrollTop()>100){
-                    $("#back-to-top").fadeIn(1500);
-                }
-                else
-                {
-                    $("#back-to-top").fadeOut(1500);
-                }
-            });
-
-            //当点击跳转链接后，回到页面顶部位置
-            $("#back-to-top").click(function(){
-                //$('body,html').animate({scrollTop:0},1000);
-        if ($('html').scrollTop()) {
-                $('html').animate({ scrollTop: 0 }, 1000);
-                return false;
-            }
-            $('body').animate({ scrollTop: 0 }, 1000);
-                 return false;            
-           });       
-     });    
-});
-</script>
