--- a/index.html
+++ b/index.html
@@ -4,16 +4,29 @@
 	<meta charset="UTF-8">
 	<title>iRock-The Virtual Pet Rock</title>
 	<script type="text/javascript">
+		var userName;
+		function greetUser(){
+			alert('Hello,I am your pet rock.');
+		}
+		function resizeRock(){
+			document.getElementById("rockImg").style.height = (document.body.clientHeight-100)*0.9;
+		}
 		function touchRock(){
-			var userName = prompt("What is your name?","Enter your name here.");
 			if (userName) {
-				alert("It is good to meet you," + userName + ".");
-				document.getElementById("rockImg").src = "rock_happy.png";
+				alert("I like the attention, " + userName + ". Thank you.");
 			}
+			else{
+				userName = prompt("What is your name?","Enter your name here.");
+				if (userName) {
+					alert("It is good to meet you," + userName + ".");
+				}
+			}
+			document.getElementById("rockImg").src = "rock_happy.png";
+			setTimeout("document.getElementById('rockImg').src='rock.png';",1*5*1000);
 		}
 	</script>
 </head>
-<body onload="alert('Hello,I am your pet rock.');">
+<body onload="resizeRock();greetUser();">
 	<div style="margin-top: 100px;text-align: center">
 		<img id="rockImg" src="rock.png" style="cursor:pointer;" alt="iRock" onclick="return touchRock()">
 	</div>
