--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>iRock-The Virtual Pet Rock</title>
-	<script type="text/javascript" src="cookie.js"></script>
+	<script type="text/javascript" src="js/cookie.js"></script>
 	<script type="text/javascript">
 		var userName;
 		function greetUser(){
