--- a/index.html
+++ b/index.html
@@ -251,7 +251,51 @@
 		<div class="col-sm-9">
 			<!--jumbotron添加巨幕区域-->
 			<div class="jumbotron">
+				<p class="text-right small" style="font-size: 30px;">走心父亲节公益广告</p>
+				<!-- <video src="media/1.mp4" controls></video> -->
+				<div class="media">
+				  <div class="media-left">
+				    <kbd>
+				    	1、
+				    </kbd>
+				  </div>
+				  <div class="media-body">
+				    <h4 class="media-heading">不知道什么时候的父亲节公益广告</h4>
+				    <video src="media/1.mp4" controls></video>
+				  </div>
+				</div>
+			</div>
+
+			<div class="jumbotron">
 				<p class="text-right small">Personal Details</p>
+				<!-- <video src="media/1.mp4" controls></video> -->
+				<div class="media">
+				  <div class="media-left">
+				    <kbd>
+				    	2、
+				    </kbd>
+				  </div>
+				  <div class="media-body">
+				    <h4 class="media-heading">2017年的父亲节公益广告</h4>
+				    <video src="media/2.mp4" controls poster='images/Penguins.jpg'></video>
+				  </div>
+				</div>
+			</div>
+
+			<div class="jumbotron">
+				<p class="text-right small">Personal Details</p>
+				<!-- <video src="media/1.mp4" controls></video> -->
+				<div class="media">
+				  <div class="media-left">
+				    <kbd>
+				    	3、
+				    </kbd>
+				  </div>
+				  <div class="media-body">
+				    <h4 class="media-heading">泰国走心的父亲节公益广告</h4>
+				    <video src="media/3.mp4" controls></video>
+				  </div>
+				</div>
 			</div>
 			<!--panel-group添加面板组-->
 			<div class="panel-group" id="accordion">
